# UnmanagedCodeSnippets

./: CMakeLists.txt  CPUBuffer.cpp  CPUBuffer.h  CustomTiledReader.cpp  CustomTiledReader.h  CustomTiledReader1.cpp  CustomTiledReader1.h  FullBlockVolumeDataProvider.cpp  FullBlockVolumeDataProvider.h  FullInMemoryVolumeDataProvider.cpp  FullInMemoryVolumeDataProvider.h  GeneralThread.cpp  GeneralThread.h  HistogramOperator.txt  ISO50ThresholdCalculator.cpp  ISO50Thresholdcalculator.h  LICENSE  LRUCachedZXOReader.cpp  LRUCachedZXOReader.h  MarchingCubesLookupTable.cpp  MarchingCubesLookupTable.h  MultiResolutionMarchingCubes.cpp  MultiResolutionMarchingCubes.h  MultiResolutionMarchingCubes2.cpp  MultiResolutionMarchingCubes2.h  NeoInsightsLDMWriter.cpp  NeoInsightsLDMWriter.h  NeoInsightsLDMreader.cpp  NeoInsightsLDMreader.h  OnlineTiledReader.cpp  OnlineTiledReader.h  OnlineTilesGenerator.cpp  OnlineTilesGenerator.h  SobelGradientOperator.cpp  SobelGradientOperator.h  SphereCalculator.cpp  SphereCalculator.h  SurfaceTriangulator.cpp  SurfaceTriangulator.h  Uint16SCVTiledReader.cpp  (+213 more)
InterviewDemo/: CMakeLists.txt  OpenglGeometry.pro  geometryengine.cpp  geometryengine.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  textures.qrc
NeoInsights/: CMakeLists.txt
NeoInsights/CTEvaluation/: CMakeLists.txt  CTPointCloudEvaluation.cpp  CTPointCloudEvaluation.h  CTPointCloudEvaluation2.h  CTPointCloudEvaluationCUDA.cpp  CTPointCloudEvaluationCUDA.h  CTPointCloudEvaluationDecorator.h  CTProfilsEvaluation.cpp  CTProfilsEvaluation.h  CTProfilsEvaluation2.h  Matrix.cpp  Matrix.h  Stdafx.h  Vector.cpp  Vector.h  ZiCTHistogram.h  ZiCTHistogram2.h  array.cpp  ctevaluationdmemo.cpp  ctpointcloudevaluationsp.cpp  ctpointcloudevaluationsp.h  ctprofileevaluation.cu  ctprofileevaluation.cuh  ctprofileevaluationcpu.cpp  ctprofileevaluationcpu.h  ctprofileevaluationkernels.cu  ctprofilsevaluationsp.cpp  ctprofilsevaluationsp.h  linearsolver.cpp  linearsolver.h  vmclasses.cpp  vmclasses.h
OpenCL/: CMakeLists.txt  oclMultiThreads.cpp
OpenCL/shared/src/: shrUtils.cpp
OpenInventor/: CMakeLists.txt  QEventToSoEvent.cxx  QEventToSoEvent.h  QtCustomViewer.cxx  QtCustomViewer.h  QtRenderArea.vpp  QtTimer.cxx  QtTimer.h  RenderArea.cxx  RenderArea.h  RenderAreaExaminer.cxx  RenderAreaExaminer.h  RenderAreaInteractive.cxx  RenderAreaInteractive.h  oiqtcustomviewer.cpp
OpenInventor/ViewerComponents/: Animator.cxx  Animator.h  AnimatorListener.h  CMakeLists.txt  SceneExaminer.cxx  SceneExaminer.h  SceneInteractor.cxx  SceneInteractor.h  SeekAnimator.cxx  SeekAnimator.h  ViewerComponents.sln  ViewerComponents.vcxproj  ViewerComponents.vcxproj.filters
OpenInventor/VolRend/: CMakeLists.txt  ReadMe.txt  ResourceManagerAuditor.h  VVizBenchmark.cxx  VVizBenchmark.h  VolumeVizAuditor.cxx  VolumeVizAuditor.h  externGlobalVariable.h  globalVariable.h  mainVolVizdemo.cxx  resource.h  translate1Dragger.iv  volCavelibFuncs.cxx  volRend.cxx  volRend.h  volRend.vcxproj  volRend.vcxproj.filters  volRendAllHeader.h  volRendDialog.iv  volRendProfView.cxx  volRendProfView.h  volrend.rc  volumeGeometry.cxx
VolumeAnalytics/: CMakeLists.txt  TransferFunction.cpp  TransferFunction.h  histogramprocessor.cpp  histogramprocessor.h  volume.ispc  volumeanalytics.cpp  volumeanalytics.h  volumeanalyticsdemo.cpp  volumerenderercpu.cpp  volumerenderercpu.h  volumerenderingopengl.cpp  volumerenderingopengl.h
demos/: CMakeLists.txt  implicitsurfacedemo.cpp  meshcrosssectiondemo.cpp  meshslicedemo.cpp  openinventordemo.cpp  surfacetriangulatordemo.cpp
pcl__/: CMakeLists.txt  pcl_config.h
pcl__/common/: CMakeLists.txt  ModelCoefficients.h  PCLHeader.h  PCLImage.h  PCLPointCloud2.h  PCLPointField.h  PointIndices.h  PolygonMesh.h  Vertices.h  cloud_iterator.h  common.h  concatenate.h  conversions.h  correspondence.h  eigen.h  exceptions.h  pcl_base.h  point_cloud.h  point_representation.h  point_traits.h  point_types.h  projection_matrix.h  register_point_struct.h
pcl__/common/common/: centroid.h  io.h
pcl__/common/console/: print.h
pcl__/common/impl/: accumulators.hpp  centroid.hpp  cloud_iterator.hpp  common.hpp  copy_point.hpp  eigen.hpp  io.hpp  projection_matrix.hpp
pcl__/features/: CMakeLists.txt  feature.h
pcl__/filters/: CMakeLists.txt
pcl__/filters/include/pcl/filters/impl/: fast_bilateral.hpp  fast_bilateral_omp.hpp
pcl__/io/: CMakeLists.txt
pcl__/kdtree/: CMakeLists.txt  kdtree.h
pcl__/octree/: CMakeLists.txt  octree_container.h  octree_iterator.h  octree_nodes.h  octree_pointcloud.h  octree_pointcloud_adjacency.h  octree_pointcloud_adjacency_container.h  octree_pointcloud_voxelcentroid.h  octree_search.h
pcl__/octree/impl/: octree_base.hpp  octree_search.hpp
pcl__/outofcore/: CMakeLists.txt
pcl__/sample_consensus/: CMakeLists.txt
pcl__/search/: CMakeLists.txt  organized.h  search.h
pcl__/segmentation/: CMakeLists.txt  supervoxel_clustering.h
pcl__/segmentation/include/pcl/segmentation/: supervoxel_clustering.h
pcl__/segmentation/include/pcl/segmentation/impl/: supervoxel_clustering.hpp
pcl__/segmentation/src/: sac_segmentation.cpp  supervoxel_clustering.cpp
pcl__/surface/: CMakeLists.txt  mls.h  processing.h  reconstruction.h
pcl__/surface/impl/: bilateral_upsampling.hpp  marching_cubes.hpp  mls.hpp
pcl__/surface/include/pcl/surface/: mls.h
pcl__/surface/include/pcl/surface/impl/: mls.hpp
spatialdatastructures/: CMakeLists.txt  defintions.h  dynamicbvh.cpp  dynamicbvh.h  editablevertex.cpp  editablevertex.h  hapalaaccelerator.cpp  hapalaaccelerator.h  octree.cpp  octree.h  ray.h  rayaccelerator.h  vbomanager.cpp  vbomanager.h
src/plugins/Image/Utility/: CMakeLists.txt  HistogramAnalyser.cpp  HistogramMerger.cpp  HistogramProbabilityAnalyser.cpp  Image2DProcessor.cpp
src/plugins/Image/Utility/include/openOR/Defs/: Image_Utility.hpp
src/plugins/Image/Utility/include/openOR/Image/: DataCollector.hpp  DataWrapper.hpp  (+7 more)
tracer/: CMakeLists.txt  aabb.h  alignedallocator.h  bvh.cpp  bvh.h  hapalaaccelerator.cpp  main.cpp  mesh.cpp  mesh.h  triangle.h
(+270 files in other folders)
